syntax = "proto3";
option java_package = "com.github.heartbeater.rpc";
option java_multiple_files = true;

package com.github.heartbeater.rpc;

message HeartbeatMessage {
}

message HeartbeatResponse {
}

service HeartbeatService {
  rpc heartbeat(HeartbeatMessage) returns (HeartbeatResponse);
}

